FlightReservationApplication/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-reservation-app
  namespace: flight-reservation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight-reservation-app
  template:
    metadata:
      labels:
        app: flight-reservation-app
    spec:
      containers:
      - name: flight-reservation-app
        image: 56805/flight-reservation-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "300m"
