FlightReservationApplication/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight-reservation-service
  namespace: flight-reservation
spec:
  type: LoadBalancer
  selector:
    app: flight-reservation-app
  ports:
  - port: 80
    targetPort: 8080
